# SeaTrader

./: .gitignore  README.md  pyproject.toml
config/: backtest_presets.yaml  config.yaml  presets.yaml
docs/: BACKTEST_AUDIT_2026-02-14.md  INSTRUCTIONS.md  autonomy_policy.md  multibot.md
multibot/: dashboard-hub.html  hub_server.py
multibot/scripts/: run_bot.sh  start_dashboards.sh  start_one.sh  status.sh  stop_dashboards.sh  stop_one.sh  sync_shared.sh  wipe_bot.sh
scripts/: capture_screenshots.py  optimize_5y.py  snapshot_config.sh  start_dashboard.sh  sweep_vs_spy.py
src/tradebot/: cli.py
src/tradebot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/tradebot/adapters/: alpaca_client.py  bars.py
src/tradebot/backtest/: cache.py  engine.py  intraday.py  job.py
src/tradebot/commands/: dashboard.py  risk_check.py
src/tradebot/dashboard/: actions.py  app.py  auth.py  backtest_symbol.py  benchmarks.py  builder.html  config_api.py  index.html  presets.py
src/tradebot/execution/: alpaca.py  guardrails.py  plan.py
src/tradebot/portfolio/: targets.py
src/tradebot/risk/: drawdown.py  exits.py
src/tradebot/signals/: trend_vol.py
src/tradebot/strategies/: base.py  baseline_trendvol.py  breakout_trend.py  pullback_trend.py  regime_filtered.py  registry.py  rule_based.py  rule_engine.py  user_store.py
src/tradebot/universe/: crypto.py  equities.py  liquidity.py  sp500.py
src/tradebot/util/: artifacts.py  config.py  env.py  equity_curve.py  live_ledger.py  market_hours.py  presets.py  state.py
(+19 files in other folders)
